--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@tailwindcss/postcss": "^4.1.13",
     "bootstrap-icons": "^1.13.1",
     "express": "^4.18.2",
-    "ng-apexcharts": "^1.15.0",
+    "lightweight-charts": "^5.0.9",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.13",
