Service worker added

--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,9 @@
               {
                 "glob": "**/*",
                 "input": "public"
-              }
+              },
+              "src/manifest.json",
+              "src/sw.js"
             ],
             "styles": [
               "src/styles.css",
