--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,12 @@
             ],
             "scripts": [
               
-            ]
+            ],
+            "server": "src/main.server.ts",
+            "outputMode": "server",
+            "ssr": {
+              "entry": "src/server.ts"
+            }
           },
           "configurations": {
             "production": {
